<resources>
    <string name="app_name">Laporan3</string>
    <string name="tv_nama">Nama</string>
    <string name="tv_nim">NIM</string>
    <string name="tv_judul">NIM</string>
    <string name="tv_jk">Jenis Kelamin</string>
    <string name="tv_lk">Laki-laki</string>
    <string name="tv_pr">Perempuan</string>
    <string name="tv_hint">Masukkan 3 angka terakhir NIM</string>
    <string name="tv_hasil">hasilnya</string>
    <string name="tv_hasil2">hasil2</string>
    <string name="tv_tf">true/false</string>
    <string name="tv_hasil3">hasil3</string>
</resources>
