<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:padding="15dp"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_judul"
        android:layout_marginBottom="20dp"
        android:textSize="30sp"
        android:textColor="@color/hitam"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/tv_hint"
        android:id="@+id/et_nim1"
        android:inputType="number"
        android:layout_marginBottom="20dp"
        android:textSize="25sp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/tv_hint"
        android:id="@+id/et_nim2"
        android:inputType="number"
        android:layout_marginBottom="20dp"
        android:textSize="25sp"/>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:id="@+id/radio_all">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_lk"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_pr"/>
    </RadioGroup>


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Kirim"
        android:onClick="kesebelah"/>

    <TextView
        android:id="@+id/tv_hasil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_hasil"
        android:textSize="30sp"/>

    <TextView
        android:id="@+id/tv_hasil2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_hasil2"
        android:textSize="30sp"/>

    <TextView
        android:id="@+id/tv_hasil3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_hasil3"
        android:textSize="30sp"/>

</LinearLayout>